--- a/index.html
+++ b/index.html
@@ -21,15 +21,26 @@
       <li><a href="#">Tienda</a></li>
       </ul>
     </nav>
-    <a href="#" class="btn"><button>Contáctanos</button></a>  
+    <a href="#" class="btn"><button>Contáctanos</button></a>
+      
     <a onclick="openNav()" class="menu" href="#"><button>Menú</button></a>
+
+    <div class="overlay" id="mobile-menu">
+      <a onclick="closeNav()" href="" class="close">&times;</a> 
+      <div class="overlay-content">
+        <a href="#">Nosotros</a>
+        <a href="#">Catálogo</a>
+        <a href="#">Promociones</a>
+        <a href="#">Tienda</a>
+        <a href="#">Contáctanos</a>
+      </div>
+    </div>
   </header>
- 
+ <script type="text/javascript" src="nav.js"></script>
+
   <div class="portada">
     <a href="https://www.facebook.com/aparatologiadelsureste/?locale=es_LA" target="_blank"><img src="imagenes/PORTADA AP.jpg" alt="PORTADA"></a>
   </div>
-  <div class="carrusel">
 
-  </div>
 </body>
 </html>
